# DAAFS

./: .env.example  Cargo.toml  README.md  TECHNICAL.md  build.rs  run.sh
.cargo/: config.toml
src/: cache.rs  lib.rs  metadata.rs  queue.rs  utils.rs
